# white-caiman

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/core/: compression.rs  file_change.rs  file_tree.rs  file_tree_diff.rs  message.rs  mod.rs  utils.rs
src/receiver/: mod.rs
src/sender/: mod.rs  watcher.rs
