[package]
name = "white-caiman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
walkdir = "2.5.0"
watchman_client = "0.9.0"
